Simplify ToolBox.copyDir Revert bad IDE suggestion